# mano

./: .gitignore  CMakeLists.txt  LICENSE  README.md
IO/: asmano.txt  asmano1.txt  ramstate.txt  registers.txt
header/: Cli_parser.hpp  cpu.hpp  file_handler.hpp  mymemory.hpp
src/: Cli_parser.cpp  RequiredFn.cpp  cpu.cpp  file_handler.cpp  main.cpp  memory.cpp
